# slater_integrator

./: .gitignore  CMakeLists.txt  notes.txt  setup_athena_blas.sh
cubature/: CMakeLists.txt
src/: CMakeLists.txt  khoi.src.gcc-9.2.0  main.cpp  makefile  paul.cpp  slater.cpp  slater.h
